feat: http server running in docker container
was forced to simplify the openapi spec as using $ref with params resulted in strange .proto file
