# api/openapi.yaml
@@ -1,12 +1,12 @@
 openapi: 3.0.3
 info:
   title: Account Management
-  version: '1.0'
+  version: "1.0"
 paths:
-  /plugins/{name}:
+  /plugin/{name}:
     get:
-      operationId: 'getPlugin'
-      description: 'Get the specified plugin'
+      operationId: "getPlugin"
+      description: "Get the specified plugin"
       parameters:
         - name: name
           in: path
@@ -15,47 +15,57 @@ paths:
           schema:
             type: string
       responses:
-        '200':
+        "200":
           description: OK
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Plugin'
-        '404':
-          description: 'Not Found'
+                $ref: "#/components/schemas/Plugin"
+        "404":
+          description: "Not Found"
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Error'
+                $ref: "#/components/schemas/Error"
   /plugins/list:
     get:
-      operationId: 'listPlugins'
-      description: 'list all supported plugins'
+      operationId: "listPlugins"
+      description: "list all supported plugins"
       parameters:
-          - $ref: '#/components/parameters/limit'
-          - $ref: '#/components/parameters/page'
+        - name: limit
+          in: query
+          required: false
+          description: "The number of items to return to the query, defaults to 25"
+          schema:
+            type: integer
+        - name: page
+          in: query
+          required: false
+          description: "The index of the page to retrieve, defaults to 0"
+          schema:
+            type: integer
       responses:
-        '500':
-          description: 'Internal Server Error'
+        "500":
+          description: "Internal Server Error"
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Error'
-        '200':
-          description: 'OK'
+                $ref: "#/components/schemas/Error"
+        "200":
+          description: "OK"
           content:
             application/json:
               schema:
                 allOf:
-                  - $ref: '#/components/schemas/PageDetails'
+                  - $ref: "#/components/schemas/PageDetails"
                   - type: object
                     properties:
                       data:
                         type: array
                         items:
-                          $ref: '#/components/schemas/Plugin'
+                          $ref: "#/components/schemas/Plugin"
 servers:
-  - url: 'https://api.server.test/v1'
+  - url: "https://api.server.test/v1"
     description: local test server
 components:
   schemas:
@@ -73,12 +83,12 @@ components:
           type: integer
         page:
           type: integer
-        count: 
+        count:
           type: integer
-        total: 
+        total:
           type: integer
         paging:
-          type: object 
+          type: object
           properties:
             current:
               type: string
@@ -100,20 +110,3 @@ components:
       properties:
         name:
           type: string
-  parameters:
-    limit:
-      name: limit
-      in: query
-      required: false
-      description: 'The number of items to return to the query, defaults to 25'
-      schema:
-        type: integer
-    page:
-      name: page
-      in: query
-      required: false
-      description: 'The index of the page to retrieve, defaults to 0'
-      schema:
-        type: integer
-
-   
